feat(tf): update terragrunt dependency github.com/terraform-aws-modules/terraform-aws-eks to v18.26.1 (#103)
Signed-off-by: Renovate Bot <bot@renovateapp.com>

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

--- a/terragrunt/live/global_tags.yaml
+++ b/terragrunt/live/global_tags.yaml
@@ -1,3 +1,16 @@
 ---
-Owner: particuleio
-Project: teks
+business_owner: "Digital"
+cost_center: "N/A"
+country: "BR"
+customer_facing: false
+customer_impacting: false
+description: "N/A"
+environment: "nickel"
+iac_source: "https://github.com/Agrium/tf-eks-br"
+iac_type: "TF"
+iac_workspace: "sharedtools-br-nickel"
+market: "br"
+owner: DigitalBrazil
+pillar: "platform"
+project: EKS
+runtime: "nickel"
