--- a/terragrunt/live/global_values.yaml
+++ b/terragrunt/live/global_values.yaml
@@ -1,13 +1,20 @@
 ---
+# Application
+application: sharedtools
+
 # Your AWS Account ID
-aws_account_id: 161285725140
+aws_account_id: 848684029682
 
 # Prefix to be added to created resources
-prefix: pio-teks
+prefix: br
 
 # AWS S3 bucket region where Terraform will store state
-tf_state_bucket_region: eu-west-1
+tf_state_bucket_region: us-east-2
 
 # Github username or organization, this can be used by Flux2 to auto configure
 # Github bootstrap
-github_owner: particuleio
+github_owner: Agrium
+
+# EKS Node Groups
+instance_type: t3a.large
+cni_version: 1.11.2
