--- a/terragrunt/live/nickel/env_values.yaml
+++ b/terragrunt/live/nickel/env_values.yaml
@@ -1,6 +1,6 @@
 ---
 # Environment name, normally equal to folder name, here it is production by default
-env: production
+env: nickel
 
 # Default domain name that will be used by default ingress resources, use a registered Route53 domain in the AWS Account
-default_domain_name: clusterfrak-dynamics.io
+default_domain_name: digital.nutrien.com
